# wfcrl-env-HRL

./: .gitignore  DEVELOPMENT_LOG.md  README.md  case.yaml  pyproject.toml  requirements.txt  run.bat
Case File/DafengH1/: T1_floris_gch_tuned.yaml
docs/: BENCHMARK.md  INTERFACE.md
examples/: demo.ipynb  example_fastfarm.py  example_floris.py  example_hycon_farm_control.py  example_online_control.py  interface.ipynb  run_dafeng_baseline.py  run_dafeng_fastfarm.py
examples/__simul__/fastfarm/FastFarm__232s__24T_1779246941.701379/FarmInputs/: Case.fstf
examples/__simul__/fastfarm/FastFarm__502s__24T_1779246441.4138658/FarmInputs/: Case.fstf
examples/__simul__/floris/Floris__4200s__24T_1779431246.7449238/: case.yaml
wfcrl/: __init__.py  config.py  fastfarm_bridge.py  interface.py  mdp.py  multiagent_env.py  simple_env.py  simul_config.py  simul_utils.py  wrappers.py
wfcrl/environments/: data_cases.py  registration.py
wfcrl/scripts/: install_simulators.py  make_ff.sh
wfcrl/simulators/fastfarm/inputs/template/FarmInputs/: Case.fstf  (+1 more)
wfcrl/simulators/fastfarm/servo_dll/: DISCON_ROSCO_TEMPLATE.IN
wfcrl/simulators/fastfarm/src/: DISCON.F90  DISCON_bridge.f90  Filters.f90  _compile.py  compile.bat  compile_rosco.bat  constants.mod  controllerblocks.mod  controllers.mod  extcontrol.mod  filters.mod  functions.mod  readsetparameters.mod  rosco_helpers.mod  rosco_io.mod  rosco_types.mod  syssubs.mod  zeromqinterface.mod
wfcrl/simulators/floris/inputs/template/: case.yaml
wfcrl/simulators/floris/inputs/turbine_library/: goldwind_8_5mw_calibrated.yaml
